# WaveTop-Box

./: CHANGELOG.md  README.md  main.py  pyproject.toml
WaveBox/: App.py  WorkSpace.py
WaveBox/Pages/: ContentFrame.py  EmptyPage.py  RackFrame.py  ReadMePage.py
WaveBox/UI/: ListView.py  TableView.py
WaveTopBox/: App.py  history.py  work_space.py
WaveTopBox/Pages/: ContentFrame.py  EmptyPage.py  RackFrame.py  ReadMePage.py
WaveTopBox/UI/: ListView.py  TableView.py
WaveTopBox/models/: error_model.py  imped_model.py  model_factory.py
WaveTopBox/pages/: content_frame.py  empty_page.py  imped_page.py  rack_frame.py
WaveTopBox/pages1/: EmptyPage.py
WaveTopBox/ui/: ui_element.py
WaveTopBox/ui1/: HeaderPanel.py
WaveTopBox/views/: errror_view.py  imped_view.py
