[tool.poetry]
name = "wavetopbox"
version = "0.1.0"
description = "WaveTop Box"
authors = ["Alex <temper8@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.10.6"
tkinter-tooltip = "^3.1.2"
rich = "^13.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
